# runible

./: Makefile  README.md  dorch.yml  playbook1.yml  playbook2.yml  playbook3.yml  playbook4.yml  pyproject.toml  requirements.txt  runible.yml
.github/workflows/: release.yml  test.yml
examples/: runible.yml
src/runible/: cli.py  engine.py  run.py  run.schema.json  test_engine.py  utilities.py
src/runible/schemas/: run.schema.json
